<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:autofillHints="name"
        android:inputType="textNoSuggestions"
        android:text=""/>
    <TextView
        android:id="@+id/tv_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastname"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/et_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lastname_hint"
        android:autofillHints="name"
        android:text=""
        android:inputType="textNoSuggestions" />
    <Button
        android:id="@+id/btn_addUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_user_to_cloud"/>
    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"
        android:id="@+id/ll_userDeletion">
        <Spinner
            android:id="@+id/sp_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_deleteUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_selected_user"/>
    </LinearLayout>
</LinearLayout>